--- a/sonar.properties
+++ b/sonar.properties
@@ -1,7 +1,8 @@
-sonar.host.url=http://18.192.57.119:9000
+sonar.host.url=http://34.199.188.113:9000
 sonar.projectKey=php-todo
 #----- Default source code encoding
 sonar.sourceEncoding=UTF-8
 sonar.php.exclusions=**/vendor/**
 sonar.php.coverage.reportPaths=build/logs/phploc.csv
 sonar.php.tests.reportPath=reports/unitreport.xml
+-Dsonar.java.jdkHome=/usr/lib/jvm/java-11-openjdk-amd64/
